--- a/index.html
+++ b/index.html
@@ -4,18 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria de preciosidad</title>
-    <link rel="stylesheet" href="./assets/img/style.css"><!--referenciado-->
+   <!-- <link rel="stylesheet" href="./assets/img/style.css">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+     rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+      crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li> <a href="index.html"><img src="./assets/img/icon/home.png" alt=""width="20px"></a></li><!--icono para home-->
-            <li> <a href="Galeria.html">GALERIA</a> </li>
-            <li> <a href="Contacto.html">CONTACTO</a> </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!--Menú-->
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+             <a class="nav-link" href="index.html"><img src="./assets/img/icon/home.png" alt=""width="20px">
+            </a>
+            </li>         
+            <li class="nav-item"> <a class="nav-link" href="Galeria.html">GALERIA</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="Contacto.html">CONTACTO</a> </li>
         </ul>
     </nav>
-    <h1 style="color: aquamarine;"> Mi Imagen</h1>
-    <img src="./assets/img/robinfu1.jpg_554688468.webp" alt="Cargando..." width="800px">
+    <h1 class="text-bg-info p-3 text-center">Nico Robin</h1>
+    <!--<h1 style="color: aquamarine;"> Mi Imagen</h1>-->
+   <!-- <img src="./assets/img/robinfu1.jpg_554688468.webp" alt="Cargando..." width="800px">-->
+                                                 <!--Carrusel--> 
+   <section>
+       
+        <div class="carousel slide" data-ride="carousel" id="carousel-principal">            
+        <div class="carousel-inner"> 
+            <div class="carousel-item active">
+            <img class="d-block w-50 mx-auto" src="assets/img/carousel/23fbdd2b7896710d57cee508a62feae2.jpg" alt="Primera Imagen"><!--db-block para bloquear wd-100 aumenta en 25-->
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-50" src="/assets/img/carousel/9803455aa0228b1d649f1d2ae8d0b97f.jpg" alt="Segunda Imagen">
+                </div>
+            <div class="carousel-item">
+                <img class="d-block w-50" src="/assets/img/carousel/images.jpg alt=" alt="Tercera Imagen">
+                </div>
+        </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+    </section>
 </body>
-
-</html>
